--- a/Web/HTML/Display.html
+++ b/Web/HTML/Display.html
@@ -3,11 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Load HTML Example</title>
 </head>
 <body>
-    <div>
-        
-    </div>
+
+    <section>
+
+    <header class="bg-red space-y-8 p-4 sm:px-8 sm:py-6 lg:p-4 xl:px-8 xl:py-6">
+        <div class="flex items-center justify-between">
+            <h2 class="font-semibold text-slate-1200">Patients List</h2>
+        </div>
+    </header>
+    <div id="patientList" class="grid grid-cols-4 gap-4 md:grid-cols-6 sm:grid-cols-9"></div>
+
+    </section>
+
+    
 </body>
 </html>
