--- a/Web/index.html
+++ b/Web/index.html
@@ -6,10 +6,19 @@
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body class="bg-blue-50 text-blue-900">
   <div id="content" class="flex items-center justify-center min-h-screen"></div>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+      emailjs.init("F-L0NyUMmV6Syj3Ei");
+    })();
+
+  </script>
   <script src="JS/Patient.js"></script>
   <script src="JS/LoadManage.js"></script>
+
 </body>
 </html>
