--- a/Web/HTML/Display.html
+++ b/Web/HTML/Display.html
@@ -6,13 +6,16 @@
     <title>Load HTML Example</title>
 </head>
 <body>
-
-    <div class="flex flex-col items-center">
-        <h1 class="text-center mb-4">Patients List</h1>
-    </div>
-
-
+    <section class="max-w-7xl mx-auto py-8 px-4 sm:px-6 lg:px-8">
+        <header class="bg-blue-600 text-white p-6 rounded-lg shadow-md mb-8">
+            <div class="flex items-center justify-between">
+                <h2 class="text-2xl font-semibold">Patients List</h2>
+            </div>
+        </header>
+    
+    
     <div id="patientList" class="grid grid-cols-3 gap-4 content-start h-56"></div>
+    </section>
 
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 </body>
